# WEB_HW8

./: Dockerfile  config.ini  connect.py  connection.py  delete.py  main.py  models.py  pyproject.toml  seeds.py
part2/: config.ini  consumer.py  models.py  producer.py
